...
        floatingActionButton = {
            FloatingActionButton(onClick = {
                onNavigate(UiEvent.Navigate(Routes.ADD_EDIT_TODO))
            }) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Add Todo"
                )
            }
        }
    ) { paddingValues ->
        LazyColumn(
            modifier = modifier
...
